# miniStos

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Colors.h  main.cpp
